Default to getting JVM memory limit from cgroups.
Fixes #2304.