@@ -519,10 +519,13 @@
 ;; compilation, so if they've done that we should do the same for project JVMs
 (def tiered-jvm-opts
   (if (.contains (or (System/getenv "LEIN_JVM_OPTS") "") "Tiered")
-    ["-XX:+TieredCompilation" "-XX:TieredStopAtLevel=1"
-     "-XX:-OmitStackTraceInFastThrow"]
-    ["-XX:-OmitStackTraceInFastThrow"]))
+    ["-XX:+TieredCompilation" "-XX:TieredStopAtLevel=1"]))
 
+(def default-jvm-opts
+  [;; actually does the opposite; omits trace unless this is set
+   "-XX:-OmitStackTraceInFastThrow"
+   ;; https://blogs.oracle.com/java-platform-group/java-se-support-for-docker-cpu-and-memory-limits
+   "-XX:+UnlockExperimentalVMOptions" "-XX:+UseCGroupMemoryLimitForHeap"])
 
 (def default-profiles
   "Profiles get merged into the project map. The :dev, :provided, and :user
@@ -530,7 +533,7 @@
   (atom {:default [:leiningen/default]
          :leiningen/default [:base :system :user :provided :dev]
          :base {:resource-paths ^:default-path/dev-resources ["dev-resources"]
-                :jvm-opts (with-meta tiered-jvm-opts
+                :jvm-opts (with-meta (into default-jvm-opts tiered-jvm-opts)
                             {:displace true})
                 :test-selectors {:default (with-meta '(constantly true)
                                             {:displace true})}
